# razer-naga-universal-key-remap

./: .travis.yml  Cargo.toml  README.md  install-service.sh
config/: razer-naga-remap-config.toml
src/: main.rs  naga.rs
systemd/: razer-naga-key-remap.service
