[package]
name = "razer-naga-key-remap"
version = "0.1.7"
authors = ["Jakub Podeszwik <jakubpodeszwik@gmail.com>"]
license = "MIT"
keywords = ["razer", "naga"]
readme = "README.md"
repository = "https://github.com/KurtHokke/razer-naga-universal-key-remap"
homepage = "https://github.com/KurtHokke/razer-naga-universal-key-remap"
description = "This program remaps razer naga keys into various keys in linux operating system."

[dependencies]
evdev-rs = "0.1.0"
uinput = "0.1.3"
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
